# nexus-backend

./: .env.example  README.md  list_models.py  pyproject.toml
app/: main.py
app/ai_analysis/: ai_analysis_controller.py  ai_analysis_routes.py  ai_analysis_schema.py  ai_analysis_service.py
app/algorithms/: dp_graph.py  dp_knapsack.py  gradient_ascent.py
app/core/: config.py
app/marketing/: marketing_controller.py  marketing_routes.py  marketing_schema.py  marketing_service.py
app/network_routing/: network_routing_controller.py  network_routing_routes.py  network_routing_schema.py  network_routing_service.py
app/report/: report_controller.py  report_routes.py  report_schema.py  report_service.py
app/server_load/: server_load_controller.py  server_load_routes.py  server_load_schema.py  server_load_service.py
